// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`additional-spacing.md - {"proseWrap":"always","singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
singleQuote: true
                                                                                | printWidth
=====================================input======================================
[[Additional spacing    within the link should be preserved]]

=====================================output=====================================
[[Additional spacing    within the link should be preserved]]

================================================================================
`;

exports[`additional-spacing.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[[Additional spacing    within the link should be preserved]]

=====================================output=====================================
[[Additional spacing    within the link should be preserved]]

================================================================================
`;

exports[`end-of-line.md - {"proseWrap":"always","singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
singleQuote: true
                                                                                | printWidth
=====================================input======================================
If I have some markdown text, it should be wrapped properly at the character limit for markdown.
However, if I have a link that overflows the end of line it should be [[wrapped as a single entity]] like this.

=====================================output=====================================
If I have some markdown text, it should be wrapped properly at the character
limit for markdown. However, if I have a link that overflows the end of line it
should be [[wrapped as a single entity]] like this.

================================================================================
`;

exports[`end-of-line.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
If I have some markdown text, it should be wrapped properly at the character limit for markdown.
However, if I have a link that overflows the end of line it should be [[wrapped as a single entity]] like this.

=====================================output=====================================
If I have some markdown text, it should be wrapped properly at the character
limit for markdown. However, if I have a link that overflows the end of line it
should be [[wrapped as a single entity]] like this.

================================================================================
`;

exports[`exceeds-line-length.md - {"proseWrap":"always","singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
singleQuote: true
                                                                                | printWidth
=====================================input======================================
[[Here is an incredibly long wiki-style link that overflows the standard wrap width for markdown]].

=====================================output=====================================
[[Here is an incredibly long wiki-style link that overflows the standard wrap width for markdown]].

================================================================================
`;

exports[`exceeds-line-length.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[[Here is an incredibly long wiki-style link that overflows the standard wrap width for markdown]].

=====================================output=====================================
[[Here is an incredibly long wiki-style link that overflows the standard wrap width for markdown]].

================================================================================
`;

exports[`exceeds-line-length-in-prose.md - {"proseWrap":"always","singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
singleQuote: true
                                                                                | printWidth
=====================================input======================================
I have some markdown prose here, with a horrible run-on sentence that [[makes little sense at all as I continue it into an obscenely long wiki-style link thingy]].

=====================================output=====================================
I have some markdown prose here, with a horrible run-on sentence that
[[makes little sense at all as I continue it into an obscenely long wiki-style link thingy]].

================================================================================
`;

exports[`exceeds-line-length-in-prose.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
I have some markdown prose here, with a horrible run-on sentence that [[makes little sense at all as I continue it into an obscenely long wiki-style link thingy]].

=====================================output=====================================
I have some markdown prose here, with a horrible run-on sentence that
[[makes little sense at all as I continue it into an obscenely long wiki-style link thingy]].

================================================================================
`;

exports[`simple.md - {"proseWrap":"always","singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
singleQuote: true
                                                                                | printWidth
=====================================input======================================
[[A simple wiki link on a single line]]

=====================================output=====================================
[[A simple wiki link on a single line]]

================================================================================
`;

exports[`simple.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[[A simple wiki link on a single line]]

=====================================output=====================================
[[A simple wiki link on a single line]]

================================================================================
`;

exports[`with-whitespace.md - {"proseWrap":"always","singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
singleQuote: true
                                                                                | printWidth
=====================================input======================================
[[ Here is a link with leading and trailing whitespace.    ]]

=====================================output=====================================
[[Here is a link with leading and trailing whitespace.]]

================================================================================
`;

exports[`with-whitespace.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[[ Here is a link with leading and trailing whitespace.    ]]

=====================================output=====================================
[[Here is a link with leading and trailing whitespace.]]

================================================================================
`;
